<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangman</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="choose_word">Play against a friend</string>
    <string name="generate_word">Play against the computer</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_try">Try</string>
    <string name="last_try">Your Last Chance</string>
    <string name="the_word_was">The word was</string>
    <string name="you_lost">You lost!</string>
    <string name="you_won">You win!</string>
    <string name="left">tries left</string>
    <string name="input_empty">You have to type a letter at first</string>
    <string name="already_typed">You have already tried this letter</string>
    <string name="yes_to_quit">Yes, stop the game</string>
    <string name="stop_the_current_game">Exit the current game ?</string>
    <string name="international_guess_title">International mode</string>
    <string name="international_guess_summaryOn">Take account of non-latin words</string>
    <string name="international_guess_summaryOff">Only use latin words</string>
    <string name="not_implemented_yet">Not implemented yet for your device, come back later!</string>

    <string name="about">About</string>
    
    
    <string name="words_in_dict_title">Only dictionnary words</string>
    <string name="words_in_dict_summaryOn">The words are only accepted if they are in the current dictionnary</string>
    <string name="words_in_dict_guess_summaryOff">All the words are accepted</string>
    <string name="choose_dictionnary_title">Choose dictionnary language</string>
    <string name="choose_dictionnary_summary">This is used in generating word and validating them</string>
    
    <string name="credits">
		&lt;h3&gt;Created by Damien Marié&lt;/h3&gt;
		&lt;p&gt;In a word of ads-blotted applications, malware-full and other quirks, he is your man: A truly devoted man who make clean and open-source application. Join him on his quest!&lt;/p&gt;
		&lt;p&gt;This application is Free (as in Freedom and as in Free Beer) and you can find the source code at github.com/MDamien/android-guesstheword.
		The code is under the BSD license, feel free to credit me or not.&lt;/p&gt;
		&lt;p&gt;And if you don\'t like something (even the color of the sky), you can contact me at &lt;strong&gt;contact@cuju.org.&lt;/strong&gt;
		Or you can leave a review like this: \"The sky is blue, the rose are rose and here is my nice review for you\"&lt;/p&gt;
		</string>
    
    <string name="howtoplay">
        &lt;h1&gt;Hangman&lt;/h1&gt;
        &lt;h1&gt;The Principle&lt;/h1&gt;
        &lt;p&gt;The goal of The Hangman is to find the secret word of the Judge by suggesting letters one by one to him.&lt;/p&gt;
        &lt;p&gt;If the letter he suggests is in the word, all the same letters are displayed in their position in the word.
            But if the letter suggested isn\'t in the word, The Judge continue to execute The Hangman.&lt;/p&gt;
        &lt;p&gt;If the word is guessed before you The Judge completed his task, you won and you\'re free. Else, you lost. &lt;/p&gt;
        &lt;h2&gt;In this application&lt;/h2&gt;
        &lt;p&gt;Here, there is not murder. There is two way to play: Against the computer and against a friend&lt;/p&gt;
        &lt;p&gt;To play against a friend (or your dad), you need to choose whom is The Judge and whom is The Hangman. &lt;/p&gt;
        &lt;p&gt;First, The Judge choose a secret word. Not a too tricky one, a fair one. One that exists is a good rule first (you can force this rule by a setting in the application).&lt;/p&gt;
        &lt;p&gt;Now, it\'s the turn to The Hangman to guess the word. Don\'t hesitate to tease him, to show him his life is in danger. Show him you\'re The Judge!&lt;/p&gt;
        &lt;p&gt;So, The Hangman won\'t maybe guess the word. Or it will, but at the end you will switch the roles. And it\'s another turn! Keep track of the scores and enjoy the thrill of choosing between "k" and "f" as last letter, always funny!&lt;/p&gt;
        
        &lt;p&gt;There is a few settings in the settings menu, don\'t hesitate to try them out.&lt;/p&gt;
        
        &lt;h2&gt;Have fun!&lt;/h2&gt;
    </string>
    
    <string-array name="dictionnaries">
        <item>Auto</item>
        <item>English (US)</item>
        <item>French (FR)</item>
    </string-array>
    
    <string-array name="dictionnaries_language">
        <item>auto</item>
        <item>english</item>
        <item>french</item>
    </string-array>
    
    <string-array name="level">
        <item>Easy (12)</item>
        <item>Medium (10)</item>
        <item>Hard (8)</item>
        <item>Very hard (6)</item>
    </string-array>
    
    <string-array name="level_values">
        <item>12</item>
        <item>10</item>
        <item>8</item>
        <item>6</item>
    </string-array>
    <string name="level_title">Difficulty</string>
    <string name="level_summary">How many errors are allowed</string>
    
</resources>
