<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true">
    
		<ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/generate_word_button"
            android:layout_centerHorizontal="true"
            android:src="@drawable/icon_words" />

        <Button
            android:id="@+id/generate_word_button"
            style="@style/FancyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/choose_word_button"
            android:layout_centerHorizontal="true"
            android:text="@string/generate_word" />

        <Button
            android:id="@+id/choose_word_button"
            style="@style/FancyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/choose_word" />

        <Button
            android:id="@+id/settings_button"
            style="@style/FancyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/choose_word_button"
            android:layout_centerHorizontal="true"
            android:text="@string/menu_settings" />
        <Button
            android:id="@+id/help_button"
            style="@style/FancyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/settings_button"
            android:layout_centerHorizontal="true"
            android:text="@string/menu_help" />



</RelativeLayout>